--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <!-- form title -->
 
                             <!-- form---1 -->
-                            <form class="c-contact-form h-adr" action="" id="Form1" method="POST">
+                            <form class="c-contact-form h-adr" action="" id="Form1" >
 
                                 <!-- all input -->
                                 <div class="c-input-form-section" id="" data-animation="slideInUp"
